Add a manifest file.
This allows Windows to apply visual styles to the controls, so that it doesn't have the old Windows 95/98/2000 appearance.

Resolves #2.

--- a/wordpad.vcxproj
+++ b/wordpad.vcxproj
@@ -320,6 +320,9 @@
     </None>
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="WordPad.exe.manifest" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
