--- a/wordpad.vcxproj.filters
+++ b/wordpad.vcxproj.filters
@@ -270,4 +270,7 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="WordPad.exe.manifest" />
+  </ItemGroup>
 </Project>
