--- a/wordpad.rc
+++ b/wordpad.rc
@@ -537,9 +537,9 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,127,34,50,14
 END
 
-IDD_SPLASH DIALOGEX 0, 0, 253, 92
+IDD_SPLASH DIALOG  0, 0, 253, 92
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
-FONT 8, "MS Sans Serif", 0, 0, 0x0
+FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "",IDC_BIGICON,"Button",BS_OWNERDRAW | WS_DISABLED,6,6,
                     38,40
